--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
- filter:blur(0px);
+ filter:blur(30px);
 
  position: absolute;
  top: -20px;
@@ -29,9 +29,10 @@ body{
 }
 
 .loadingText{
-    font-size: 60px;
+    font-size: 50px;
     color: white;
     position: absolute;
     top: 50%;
     left: 50%;
+    z-index: 100;
 }
